--- a/grid.html
+++ b/grid.html
@@ -12,9 +12,12 @@
 			display: grid;
 			/*grid-template-columns: 30% 20% 50%;*/
 			/*grid-template-columns: 1fr 2fr 1fr;*/
-			grid-template-columns: repeat(3, 1fr);
+            grid-template-columns: repeat(3, 1fr);
+            grid-template-rows: repeat(3, minmax(200px, auto));
+            /* grid-auto-rows: minmax(200px, auto); */
 			max-width: 960px;
 			margin: 0 auto;
+            grid-gap: 10px;
 		}
 		#content div{
 			background: #3bbced;
@@ -22,7 +25,7 @@
 		}
 		#content div:nth-child(even){
 			background: #777;
-			padding: 30px;
+			
 		}
 	</style>
 </head>
@@ -32,7 +35,7 @@
 
 		<div>1</div>
 		<div>2</div>
-		<div>3</div>
+		<div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse inventore architecto totam vitae autem quod, nesciunt nulla nam laboriosam corrupti unde numquam facilis, soluta voluptates amet ipsum debitis deleniti minima. Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam architecto nam repellat ullam eius fugit, laudantium rerum tenetur dolores repudiandae dolorem quam, modi, optio quo omnis officia id dolore! Recusandae.</div>
 		<div>4</div>
 		<div>5</div>
 		<div>6</div>
