--- a/index.html
+++ b/index.html
@@ -39,6 +39,23 @@ Latest commit 7720ccf on 15 Sep 2017
 			font-family: 'Nunito Semibold';
 			text-align: center;
 		}
+        #content{
+			display: grid;
+			grid-template-columns: repeat(4, 1fr);
+			grid-auto-rows: minmax(100px, auto);
+			grid-gap: 10px;
+			max-width: 960px;
+			margin: 0 auto;
+            grid-template-areas:
+                "header header header header"
+                "footer footer footer footer"
+                "main main main main"
+                "main main main main"
+                "aside aside nav nav"
+                "section section section section"
+                "section section section section";
+		        }
+        @media screen and (min-width: 760px) {
 		#content{
 			display: grid;
 			grid-template-columns: repeat(4, 1fr);
@@ -48,12 +65,13 @@ Latest commit 7720ccf on 15 Sep 2017
 			margin: 0 auto;
             grid-template-areas:
                 "header header header header"
-                "aside . main main"
-                "nav . main main"
+                "aside aside main main"
+                "nav nav main main"
                 "section section section section"
                 "section section section section"
                 "footer footer footer footer";
-		}
+		        }
+            }
 		#content > *{
 			background: #3bbced;
 			padding: 30px;
